@@ -1,5 +1,8 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+2008-02-25 Christian Hernmarck
+	- GUI:
+		* Fixed #1052: postmaster email not created
 
 2008-02-25 Christian Hernmarck
 	- GUI:
